update post: Learn Git the FAST way.

--- a/clck8p00p000008l0bmhz938k.md
+++ b/clck8p00p000008l0bmhz938k.md
@@ -1,5 +1,7 @@
 # Learn Git the FAST way.
 
+In this blog post, I'll share what is Git? And how to get started with Git.
+
 But first, why even learn git? Well... Let's say you are working on a project which has thousands of lines of code. So you modified 5 different files. However, due to some reasons, you don't want those changes. See the problem? To revert back to some previous version, you need to modify a lot of code.
 
 Luckily, Git helps us do just that. What is Git then? Git is a version control system that helps you track different versions of your code.
