update post: Learn Git the FAST way.

--- a/clck8p00p000008l0bmhz938k.md
+++ b/clck8p00p000008l0bmhz938k.md
@@ -16,7 +16,7 @@ Before getting started with git, let's understand what a repository is. A git re
 
 By default, git does not track your changes. To start tracking changes, we need to initialize a repository.
 
-```bash
+```
 cd D:\learn-git
 git init
 ```
@@ -41,7 +41,7 @@ To switch to a specific branch, use `git checkout <branch-name>`.
 
 Alternatively, you can use `git checkout -b <branch-name>` to create a branch and switch to it.
 
-```bash
+```
 git branch sam  # creates a branch called 'sam'
 git checkout sam  # switches to 'sam'
 # alternatively use
@@ -58,7 +58,7 @@ To make things cleaner, Git does not track all the files in your codebase. It on
 
 Use `git add <filename>` to add files/folders to the staging area. All changes made to the file will be tracked.
 
-```bash
+```
 git add intro.txt
 ```
 
@@ -70,7 +70,7 @@ In most cases, you would want to stage all the changes. In that case use `git ad
 
 Once we have added everything to the staging area, we can now make changes to our codebase. For now, I added my name in `intro.txt`.
 
-```bash
+```
 # added text "My name is Sam Maji" in intro.txt
 git add .
 git status
@@ -78,21 +78,21 @@ git status
 
 If we run git status, we'll see `intro.txt` marked in green. That's because we have some changes that are not "saved".
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1672988328475/f1850295-daf4-46b1-b00c-13f7fa9d44a0.png align="center")
+![git status will show intro.txt as green](https://cdn.hashnode.com/res/hashnode/image/upload/v1672988328475/f1850295-daf4-46b1-b00c-13f7fa9d44a0.png align="center")
 
 We can save these changes or "commit these changes" by using the command `git commit -m "your commit message"`. A commit message is mandatory.
 
-```bash
+```
 git commit -m "[add] created intro.txt and added my name"
 ```
 
 Now I'll add the text "I am a Web Developer" in `intro.txt` and make one more commit.
 
-```go
+```
 git commit -m "[add] my profession"
 ```
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1672989223650/266f9eac-8965-4362-ae69-c3aa8544e97a.png align="center")
+![git commit](https://cdn.hashnode.com/res/hashnode/image/upload/v1672989223650/266f9eac-8965-4362-ae69-c3aa8544e97a.png align="center")
 
 ### Revert Changes
 
@@ -100,7 +100,7 @@ Every commit has a unique commit id. Use `git log` to see your commit history.
 
 **Side Note:** Use `git log --show-linear-break --oneline` to get a formatted version of the commit history with every commit in a single line.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1672989461908/30535d15-7584-4a28-8398-1bc0e50b9c08.png align="center")
+![commit log](https://cdn.hashnode.com/res/hashnode/image/upload/v1672989461908/30535d15-7584-4a28-8398-1bc0e50b9c08.png align="center")
 
 Now, let's say you don't want the recent changes and want to revert back to a previous commit. Use `git revert <commit-id>` to restore your code base to a previous commit.
 
