update post: JavaScript Datatypes in Detail

--- a/clcnehc91000008l8207w6wb3.md
+++ b/clcnehc91000008l8207w6wb3.md
@@ -2,7 +2,8 @@
 
 There are seven different primitive data types in JavaScript: undefined, null, number, bigint, string, boolean and symbol. We'll learn about each of them in detail.
 
-## 1\. Number
+1. ## Number
+    
 
 Number stores numerical values. This is different from some other programming languages, which may have separate data types for integers and floating-point values (decimals).
 
@@ -10,16 +11,22 @@ Number stores numerical values. This is different from some other programming la
 let num = 25.2; // <-- datatype of num is number
 ```
 
-Internally, numbers are stored as double-precision 64-bit binary (IEEE 754) values. Numbers can store positive numbers between $2^{-1074}$ and $2^{1024}$, and negative numbers in the same range
+Internally, numbers are stored as double-precision 64-bit binary (IEEE 754) values. Numbers can store positive numbers between 2^(-1074) and 2^(1024), and negative numbers in the same range
 
 ```javascript
 Number.MAX_VALUE; // = 1.7976931348623157e+308
 Number.MIN_VALUE; // = 5e-324
 ```
 
-Here, the letter `e` represents “times 10 to the power of”. For example, `5e-324` simply means $5\\times 10^{-324}$.
+Here, the letter `e` represents “times 10 to the power of”. For example, `5e-324` simply means 5 \* 10^(-324).
 
-Number can safely store Integer values between $-\\left( 2^{53}-1 \\right)$ and $+(2^{53}-1)$. There is a method that checks whether an integer is within the safe range or not: `Number.isSafeInteger()`. This method returns a boolean value indicating whether the number is a safe integer or not.
+$$5\times 10^{-324}$$
+
+Number can safely store Integer values between -2^{53}-1 and +(2^{53}-1).
+
+$$-\left( 2^{53}-1 \right) \ \hspace{2mm} to \hspace{2mm} +(2^{53}-1)$$
+
+There is a method that checks whether an integer is within the safe range or not: `Number.isSafeInteger()`. This method returns a boolean value indicating whether the number is a safe integer or not.
 
 Generally, you won't need to worry about the range of values. Any values that exceed or subceed the range will be converted to `Infinity` or `0`. The `Infinity` property behaves very similarly to infinity in mathematics.
 
@@ -69,7 +76,8 @@ if (Number.isNaN(num1) && Number.isNaN(num2)) {
 }
 ```
 
-## 2\. BigInts
+1. ## BigInts
+    
 
 BigInts are used to store integers of arbitrarily large magnitudes. This allows you to store and manipulate large integers that would not fit within the range of the number data type.
 
@@ -80,7 +88,7 @@ let big_num1 = 32n;
 let big_num2 = new BigInt(32);
 ```
 
-BigInts are not strictly equal (===) to numbers. Instead, they are loosely equal (==) to numbers if the number value is within the safe range for integers, which is between $-(2^{53} - 1)$ and $(2^{53} - 1)$.
+BigInts are not strictly equal (===) to numbers. Instead, they are loosely equal (==) to numbers if the number value is within the safe range for integers, which is between -(2^{53} - 1) and 2^{53}-1.
 
 ```javascript
 let num = 57;
@@ -90,7 +98,8 @@ console.log(num === big_num); // false
 console.log(num == big_num); // true
 ```
 
-## 3\. String
+1. ## String
+    
 
 String is used for storing text-based data of arbitrary length. To get the length of the string, use `string.length` property
 
@@ -114,7 +123,7 @@ name.charCodeAt(5); // unicode of "A" is 65
 
 A string is a collection of characters and symbols. In other words, a string (in JavaScript) is a collection of unique unsigned 16-bit integer values in a specific order.
 
-String functions is a topic of its own. Here I'll quickly review some of the important string functions.
+String functions are a topic of their own. Here I'll quickly review some of the important string functions.
 
 * `charAt(index)` returns the character at the `index` position. You can also use square brackets (`string_value[index]`).
     
@@ -148,7 +157,8 @@ let initials = first_name.charAt(0) + last_name.charAt(0); // "SM"
 let initials_lower_case = initials.toLowerCase(); // "sm"
 ```
 
-## 4\. Boolean
+1. ## Boolean
+    
 
 The boolean datatype is used to store `true` or `false` value.
 
