update post: Create dropdown menu (tui) in c

--- a/cm82m3sg6000109l278weh6ny.md
+++ b/cm82m3sg6000109l278weh6ny.md
@@ -6,7 +6,7 @@ datePublished: Mon Mar 10 2025 05:18:49 GMT+0000 (Coordinated Universal Time)
 cuid: cm82m3sg6000109l278weh6ny
 slug: create-dropdown-menu-tui-in-c
 cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1741583856298/40202be6-70c7-461a-924f-ce1a9ad035da.png
-tags: c, tui
+tags: c, cli, tui
 
 ---
 
