--- a/cm82m3sg6000109l278weh6ny.md
+++ b/cm82m3sg6000109l278weh6ny.md
@@ -47,7 +47,7 @@ void reset_terminal() {
 
 The `init_terminal` function disables canonical mode and terminal echo. `reset_terminal` re-enables it.
 
-Here, `c_lflag` is an unsigned int, where each bit indicates some property. `ICANON` and `ECHO` are unsigned int as well. If our, `c_lflag` is `1011`, it indicates that canonical mode is turned on, since the bit that indicates canonical mode (2nd last bit) is `1`. `ICANON` is `0010`. When we do a bit-wise `and` operation, we flip only the bit indicating canonical mode and keep all the others as it is.
+Here, `c_lflag` is an unsigned int, where each bit indicates some property. `ICANON` and `ECHO` are unsigned int as well. If our, `c_lflag` is `1011`, it indicates that canonical mode is turned on, since the bit that indicates canonical mode (2nd last bit) is `1`. `ICANON` is `0010`. When we do a bit-wise `and` operation, we flip only the bit indicating canonical mode and keep all the others as it is. (Checkout more about [bit masks](https://debajyatidey.hashnode.dev/deep-dive-into-bitwise-optimization#heading-common-operations)).
 
 `1011 & ~0010` → `1011 & 1101` → `1001`
 
