update post: Create dropdown menu (tui) in c

--- a/cm82m3sg6000109l278weh6ny.md
+++ b/cm82m3sg6000109l278weh6ny.md
@@ -12,7 +12,7 @@ tags: c, cli, tui
 
 In this article, I’ll show how to create a simple dropdown menu using C, with the ability to navigate through options using the arrow keys and select one using the Enter key. Here’s how it would look.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1741582496632/a7eeca4d-2fd8-4b29-93d1-fd3cf44c69a1.png align="center")
+![Dropdown preview](https://cdn.hashnode.com/res/hashnode/image/upload/v1741582496632/a7eeca4d-2fd8-4b29-93d1-fd3cf44c69a1.png align="center")
 
 # Disable terminal modes
 
