update post: Remove trailing spaces in vim.

--- a/cmh10owe7000802le8ne5fk82.md
+++ b/cmh10owe7000802le8ne5fk82.md
@@ -24,7 +24,7 @@ autocmd BufWritePre *.ts :%s/\s\+$//e
 This runs only for typescript files.
 
 ## Warning trailing spaces.
-I use this warning to detect trailing spaces in a file.
+If you not using the automatic trailing space removal, you can create a function to detect trailing spaces in a file and issue warnings.
 ```vim
 function! StatuslineTrailingSpaceWarning()
     if !exists('b:statusline_trailing_space_warning')
