update post: Remove trailing spaces in vim.

--- a/cmh10owe7000802le8ne5fk82.md
+++ b/cmh10owe7000802le8ne5fk82.md
@@ -1,5 +1,6 @@
 ---
 title: "Remove trailing spaces in vim."
+seoDescription: "How to automatically remove trailing spaces in vim."
 datePublished: Tue Oct 21 2025 20:28:57 GMT+0000 (Coordinated Universal Time)
 cuid: cmh10owe7000802le8ne5fk82
 slug: remove-trailing-spaces-in-vim
