--- a/cmk0073zg000a02i684m0h6i7.md
+++ b/cmk0073zg000a02i684m0h6i7.md
@@ -6,7 +6,7 @@ slug: looking-forward-on-2026
 
 ---
 
-2025 was a great year - built a lot of [cool stuff](https://www.sammaji.com/work), got employed, moved to bengaluru, grew on [X](https://x.com/sammaji15)
+2025 was a great year - built a lot of [cool stuff](https://www.sammaji.com/work), got employed, moved to bengaluru, grew on [X](https://x.com/sammaji15).
 
 here’s some of the things i plan on working in 2026:
 
