update post: looking forward on 2026

--- a/cmk0073zg000a02i684m0h6i7.md
+++ b/cmk0073zg000a02i684m0h6i7.md
@@ -12,7 +12,7 @@ here’s some of the things i plan on working in 2026:
 
 * content creation - always been on my “things to do”, but didn’t find much time for it. 2026 will change this.
     
-* continuing to working maxim - keep chipping on making maxim the best evals and ai observability platform.
+* continue work on maxim - keep chipping on making maxim the best evals and ai observability platform.
     
 * atomo - last year i shared my idea of an [extensible file manager](https://www.sammaji.com/work/atomo) on [r/tauri](https://www.reddit.com/r/tauri/). people loved it, so i am commited to it (though admittedly i couldn’t allocate much time to it last year). here’s some rough timelines:
     
